k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ticket-app
spec:
  selector:
    app: ticket-frontend
  ports:
    - port: 80
      targetPort: 80
